--- a/public/index.html
+++ b/public/index.html
@@ -55,24 +55,29 @@
                                     <li data-target="#myCarousel" data-slide-to="2"></li>
                                     <li data-target="#myCarousel" data-slide-to="3"></li>
                                     <li data-target="#myCarousel" data-slide-to="4"></li>
+                                    <li data-target="#myCarousel" data-slide-to="5"></li>
                                 </ol>
 
                                 <div class="carousel-inner">
                                     <div class="item active">
-                                        <img class="profile-image " src="./Img/IMG_1033_2.JPG" alt="First">
+                                        <img class="profile-image " src="https://lh3.google.com/u/0/d/1e-n9plreaWoL4-Jc8v03m5-WI2ayG-Y_=w1830-h915-iv1" alt="First">
                                     </div>
                                     <div class="item">
-                                        <img class="profile-image" src="./Img/IMG_1077.JPG" alt="Second">
+                                        <img class="profile-image" src="https://lh3.google.com/u/0/d/1K7rvx9tFzD8A9aQqIs-R8QkErmCTl6EY=w1830-h915-iv1" alt="Second">
                                     </div>
                                     <div class="item">
-                                        <img class="profile-image" src="./Img/IMG_1053_2.JPG" alt="Fourth">
+                                        <img class="profile-image" src="https://lh3.google.com/u/0/d/1KHCDvT-3Gf-TbOQymgVx1jPksC7Kh9y5=w1830-h915-iv1" alt="Fourth">
                                     </div>
                                     <div class="item">
-                                        <img class="profile-image" src="./Img/IMG_0989.JPG" alt="Fourth">
+                                        <img class="profile-image" src="https://lh3.google.com/u/0/d/1Qj0QyJ7IFH1tn8vZYX9VBcHwPXXKSWGk=w1830-h915-iv1" alt="Fourth">
                                     </div>
                                     <div class="item">
-                                        <img class="profile-image" src="./Img/IMG_1092.JPG" alt="Third">
+                                        <img class="profile-image" src="https://lh3.google.com/u/0/d/1fEu0OPAZkc0pGxs_Z9lICg6hNz-x6fZC=w1830-h915-iv1" alt="Third">
                                     </div>
+                                    <div class="item">
+                                        <img class="profile-image" src="./Img/Map.png" alt="Third">
+                                    </div>
+                                    
                                 </div>
                                 <a class="left carousel-control" href="#myCarousel"  data-slide="prev">
                                     <span class="glyphicon glyphicon-chevron-left"></span>
