Alt Attribute Names for Images

--- a/public/index.html
+++ b/public/index.html
@@ -73,22 +73,22 @@
 
                                 <div class="carousel-inner">
                                     <div class="item active">
-                                        <img class="profile-image " src="https://lh3.google.com/u/0/d/1e-n9plreaWoL4-Jc8v03m5-WI2ayG-Y_=w1830-h915-iv1" alt="First">
+                                        <img class="profile-image " src="https://lh3.google.com/u/0/d/1e-n9plreaWoL4-Jc8v03m5-WI2ayG-Y_=w1830-h915-iv1" alt="Apartment unit 7 and 6">
                                     </div>
                                     <div class="item">
-                                        <img class="profile-image" src="https://lh3.google.com/u/0/d/1K7rvx9tFzD8A9aQqIs-R8QkErmCTl6EY=w1830-h915-iv1" alt="Second">
+                                        <img class="profile-image" src="https://lh3.google.com/u/0/d/1K7rvx9tFzD8A9aQqIs-R8QkErmCTl6EY=w1830-h915-iv1" alt="Kitchen in unit 5">
                                     </div>
                                     <div class="item">
-                                        <img class="profile-image" src="https://lh3.google.com/u/0/d/1KHCDvT-3Gf-TbOQymgVx1jPksC7Kh9y5=w1830-h915-iv1" alt="Fourth">
+                                        <img class="profile-image" src="https://lh3.google.com/u/0/d/1KHCDvT-3Gf-TbOQymgVx1jPksC7Kh9y5=w1830-h915-iv1" alt="Bedroom with closet and bathroom">
                                     </div>
                                     <div class="item">
-                                        <img class="profile-image" src="https://lh3.google.com/u/0/d/1Qj0QyJ7IFH1tn8vZYX9VBcHwPXXKSWGk=w1830-h915-iv1" alt="Fourth">
+                                        <img class="profile-image" src="https://lh3.google.com/u/0/d/1Qj0QyJ7IFH1tn8vZYX9VBcHwPXXKSWGk=w1830-h915-iv1" alt="Apts 2, 3, and 4">
                                     </div>
                                     <div class="item">
                                         <img class="profile-image" src="https://lh3.google.com/u/0/d/1fEu0OPAZkc0pGxs_Z9lICg6hNz-x6fZC=w1830-h915-iv1" alt="Third">
                                     </div>
                                     <div class="item">
-                                        <img class="profile-image" src="https://www.google.com/maps/vt/data=aZTRSKzY9AxUnIeh62nfn4acNjo4MhV2XPWFSy1WC_Cza5obMTM9pEKXFWWrkBDfRcNHnGRZWonaytZqeTldUneUsVxDd3qi-DvYOXtKRYPfqjYqkOo4rR48TC7wIcCic1ZDSjhX7SjnAwy05E4y1zVL4p-9yVnk6vDZeo79llil4fnGzA8J0-G_y_mv6-rL07bf7ncvE-rL-6LuysxUOllGtlWpRU4CMiWImWtfpe0lpYu-cOey8Xe7xKxU5M7Mfr2MNjWq65sx5UD9kIJqYCtMxVkS34_a6TJKX_Qu5gRuCEaQiZsV2JIWzLxk" alt="Third">
+                                        <img class="profile-image" src="https://www.google.com/maps/vt/data=aZTRSKzY9AxUnIeh62nfn4acNjo4MhV2XPWFSy1WC_Cza5obMTM9pEKXFWWrkBDfRcNHnGRZWonaytZqeTldUneUsVxDd3qi-DvYOXtKRYPfqjYqkOo4rR48TC7wIcCic1ZDSjhX7SjnAwy05E4y1zVL4p-9yVnk6vDZeo79llil4fnGzA8J0-G_y_mv6-rL07bf7ncvE-rL-6LuysxUOllGtlWpRU4CMiWImWtfpe0lpYu-cOey8Xe7xKxU5M7Mfr2MNjWq65sx5UD9kIJqYCtMxVkS34_a6TJKX_Qu5gRuCEaQiZsV2JIWzLxk" alt="Bayou side view from apartment unit 5">
                                     </div>
                                     
                                 </div>
