--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Apartment complex in Pascagoula, MS right on the Yazoo Bayou. Contact Liquors Unlimited at 228-762-3874 for inqueries.">
+    <meta name="description" content="1 bedroom apartments for rent in Pascagoula, MS right on the Yazoo Bayou. Contact Liquors Unlimited at 228-762-3874 for inqueries.">
     <meta name="theme-color" content="#000000">
     <!--
       manifest.json provides metadata used when your web app is added to the
